# nwn2-charedit

./: .gitignore  .gitmodules  Cargo.toml  header_read.txt  save.txt
common/src/: error.rs  lib.rs
dds/: Cargo.toml  bcdec.c  bridge.cpp  build.rs
dds/src/: lib.rs
lib/: Cargo.toml
lib/src/: error.rs  globals.rs  lib.rs  utils.rs
lib/src/files/: casavir.ros  dds.rs  grobnar.ros  khelgar.ros  mod.rs  neeshka.ros  npc_bevil.ros  offset.rs  player.bic  playerlist.ifo  qara.ros  res_ref.rs  roster.rst  sand.ros  two_da.rs
lib/src/files/gff/: exo_string.rs  field.rs  label.rs  mod.rs  struct.rs  void.rs
lib/src/files/tlk/: mod.rs  reader.rs  string_data.rs
lib/src/tests/files/: ammon_jerro.ros  bishop.ros  construct.ros  elanee.ros  is_fireball.dds  shandra.ros  zhjaeve.ros
src/: error.rs  globals.rs  main.rs  resources.rs  string_stream.rs  utils.rs
src/files/: gff.rs  mod.rs
src/files/gff/: exo_string.rs  field.rs  label.rs  mod.rs  res_ref.rs  struct.rs
src/files/tlk/: mod.rs
src/tests/files/: example.2da  playerlist.ifo
ui/: Cargo.toml
ui/src/: error.rs  feat.rs  field_ref.rs  main.rs  spell.rs  tlk_string_ref.rs  two_d_array.rs
ui/src/ids/: class.rs  mod.rs  spell.rs
ui/src/player/: feat_list.rs  mod.rs  player_class.rs
ui/src/ui/: character.rs  mod.rs  panels.rs  save_file.rs  search_window.rs  select_file.rs  settings.rs
ui/src/ui/character/: feat_panel.rs  spell_panel.rs
