[package]
name = "nwn2-charedit"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = "0.13.1"
nom = "7.1.3"
roxmltree = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
zip = "2.2.0"
rust-utils = { git = "https://github.com/SoxPopuli/rust-utils.git", tag = "v1.7.0", features = [ "vec2d", "byte_readers" ]}
