[package]
name = "nwn2-charedit-lib"
version.workspace = true
edition.workspace = true

[dependencies]
roxmltree = "0.21.0"
rust-utils = { git = "https://github.com/SoxPopuli/rust-utils.git", tag = "v1.7.0", features = [ "vec2d", "byte_readers" ]}
encoding_rs = "0.8.34"
flate2 = "1.0.34"
paste.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
