[package]
name = "nwn2-charedit-lib"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
roxmltree = "0.21.0"
rust-utils.workspace = true
encoding_rs = "0.8.34"
flate2 = "1.0.34"
paste.workspace = true
itertools.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
